--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
+        "cordova-ios": "^4.4.0",
         "cordova-osx": "^4.0.1",
+        "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-whitelist": "^1.3.2"
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-console": {}
         },
         "platforms": [
+            "ios",
             "osx"
         ]
     }
